@@ -11,7 +11,7 @@ filename = corpus/BadMETA.yml
 [Prereqs]
 CPAN::Meta::YAML = 0.011
 File::Spec = 0.80
-JSON::PP = 2.27200
+JSON::PP = 2.27300
 
 [Prereqs / TestRequires]
 Test::More = 0.47
